# steamos-manager

./: .gitlab-ci.yml  Cargo.toml  HACKING.md  Hacking.md  LICENSE  README.md  com.steampowered.SteamOSManager1.Manager.xml  com.steampowered.SteamOSManager1.xml
data/: com.steampowered.SteamOSManager1.conf  com.steampowered.SteamOSManager1.service  steamos-manager.service  steamosmanager.service  test-dbus.conf
data/system/: com.steampowered.SteamOSManager1.service  steamos-manager.service
data/user/: com.steampowered.SteamOSManager1.service  steamos-manager.service
src/: cec.rs  daemon.rs  ds_inhibit.rs  error.rs  hardware.rs  job.rs  lib.rs  main.rs  manager.rs  platform.rs  power.rs  process.rs  proxy.rs  root.rs  systemd.rs  testing.rs  thread.rs  udev.rs  user.rs  user_manager.rs  wifi.rs
src/daemon/: config.rs  mod.rs  root.rs  user.rs
src/manager/: mod.rs  root.rs  user.rs
src/proxy/: ambient_light_sensor1.rs  battery_charge_limit1.rs  cpu_scaling1.rs  factory_reset1.rs  fan_control1.rs  gpu_performance_level1.rs  gpu_power_profile1.rs  gpu_tdp_limit1.rs  hdmi_cec1.rs  job.rs  job1.rs  job_manager.rs  job_manager1.rs  manager.rs  manager2.rs  mod.rs  storage1.rs  tdp_limit1.rs  udev_events.rs  udev_events1.rs  update_bios1.rs  update_dock1.rs  wifi_debug1.rs  wifi_debug_dump1.rs  wifi_power_management1.rs
src/sls/: ftrace.rs  mod.rs
