[package]
name = "steamos-manager"
version = "24.5.1"
edition = "2021"

[dev-dependencies]
tempfile = "3"
zbus_xml = "4"

[profile.release]
strip="symbols"

[dependencies]
anyhow = "1"
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std", "usage"] }
inotify = { version = "0.10", default-features = false, features = ["stream"] }
libc = "0.2"
itertools = "0.12"
nix = { version = "0.28", default-features = false, features = ["fs", "signal"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
toml = "0.8"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
xdg = "2.5"
zbus = { version = "4", default-features = false, features = ["tokio"] }
