[package]
name = "steamos-manager"
version = "24.5.1"
edition = "2021"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip="symbols"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std", "usage"] }
config = { version = "0.14", default-features = false, features = ["async", "ini", "toml"] }
inotify = { version = "0.11", default-features = false, features = ["stream"] }
lazy_static = "1"
libc = "0.2"
itertools = "0.13"
nix = { version = "0.29", default-features = false, features = ["fs", "poll", "signal"] }
num_enum = "0.7"
regex = "1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
toml = "0.8"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
udev = "0.9"
xdg = "2.5"
zbus = { version = "4", default-features = false, features = ["tokio"] }
zbus_xml = "4"
strum = { version = "0.26", features = ["derive"] }
